# pdf-extactext

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  exception_handlers.py
app/api/v1/: pdf_router.py  user_routes.py
app/application/: __init__.py
app/application/dto/: __init__.py  user_dto.py
app/application/services/: user_service.py
app/core/: __init__.py  config.py  exceptions.py
app/domain/: __init__.py
app/domain/entities/: document.py  user.py
app/domain/exceptions/: domain_exceptions.py
app/domain/repositories/: __init__.py  document_repository.py  user_repository.py
app/infrastructure/: __init__.py
app/infrastructure/database/: __init__.py  connection.py
app/infrastructure/database/models/: __init__.py  user_model.py
app/infrastructure/repositories/: __init__.py  mongo_document_repository.py  mongo_user_repository.py  sql_user_repository.py
app/services/: pdf_service.py
app/static/: custom.css
docs/: diagrama_clases.puml  diagrama_secuencia.puml  diagramam_actividad.puml  generar_guia_estudio_pdf.py  guia_estudio_repositorio.md
src/: extractor.py
src/src/: __init__.py  processor.py
tests/: conftest.py  test_extractor.py  test_upload.py
tests/data/: test_mongo_real.py  test_repository.py
tests/domain/: __init__.py  test_checksum.py  test_file_signature_validator.py
tests/presentation/: test_document_upload.py  test_documents_connection_errors.py
(+3 files in other folders)
