[project]
name = "pdf-extactext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.10.1",
    "python-multipart>=0.0.26",
    "uvicorn>=0.45.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
