[project]
name = "pdf-extactext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.1.1",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.1",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
